# CartolaPy

./: .env.example  .gitignore  AGENTS.md  CartolaPy.py  LICENSE  README.md  docker-compose.yml  plot_dfs.py  plotter.py  pre_season_script.sh  pyproject.toml  requirements.txt  todo
.agents/skills/taskiq/: SKILL.md
.agents/skills/taskiq/references/: available-components.md  fastapi-integration.md
.github/: dependabot.yml
.github/workflows/: docker.yml  ruff.yml  tests.yml
backend/: Dockerfile  dependencies.py  lifespan.py  main.py  pyproject.toml  tasks.py  tkq.py  tkq_sched.py
backend/api/: models.py  routes.py
backend/core/: config.py  lifespan.py  scheduler.py
backend/services/: atletas_unified.py  debug.py  pontos_cedidos_unified.py  redis_store.py  request_handler.py  updater.py
backend/services/data_loaders/: atletas.py  confrontos.py  data_loader.py  pontos_cedidos.py  pontuacoes.py
backend/src/: atletas_updater.py  confrontos_or_mandos_updater.py  dependencies.py  lifespan.py  main.py  pontos_cedidos_updater.py  pontuacoes_updater.py  tasks.py  tkq.py  tkq_sched.py  utils.py
backend/src/api/: auth.py  dicas_routes.py  models.py  routes.py
backend/src/pre_season/: dfs_creator.py  dicts_creator.py
backend/src/services/: __init__.py  atletas_unified.py  cartola_models.py  dicas_da_rodada.py  dicas_memory.py  enums.py  fotmob.py  fotmob_mappings.py  player_view.py  pontos_cedidos_unified.py  pontos_conquistados_unified.py  redis_store.py  request_handler.py
backend/src/services/data_loaders/: atletas.py  confrontos.py  data_loader.py  pontos_cedidos.py  pontuacoes.py
backend/tests/: conftest.py  test_api_routes.py  test_atletas.py  test_atletas_historico.py  test_atletas_unified.py  test_confrontos.py  test_data_freshness.py  test_data_loader.py  test_dicas_da_rodada.py  test_dicas_memory.py  test_enums.py  test_fotmob.py  test_player_view.py  test_pontos_cedidos.py  test_pontos_cedidos_unified.py  test_pontos_conquistados_unified.py  test_pontuacoes.py  test_request_handler.py  test_tasks.py
backend/tests/integration/: test_data_freshness.py  test_redis_store_integration.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  streamlit_app.py  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AtletaCharts.jsx  FilterSidebar.jsx  MandoToggle.jsx  Navbar.jsx  PlayerPointsChart.jsx  PlayerShotMap.jsx  PontosAnalysisChart.css  PontosCedidosScoutChart.jsx  RoundIntervalSlider.jsx  RoundSlider.jsx  ScoutSelect.jsx  TableView.jsx  ThemeToggle.jsx  UpdateButton.jsx
frontend/src/pages/: Atletas.jsx  AtletasUnified.jsx  Confrontos.jsx  DevDashboard.jsx  DicasDaRodada.jsx  PlayerView.css  PlayerView.jsx  PontosCedidos.jsx  PontosCedidosUnified.jsx  PontosConquistadosUnified.jsx  Pontuacoes.jsx
scripts/: mid_season_script.sh  pre_season_script.sh
src/: atletas_updater.py  confrontos_or_mandos_updater.py  enums.py  pontos_cedidos_updater.py  pontuacoes_updater.py  update_atletas.py  update_confrontos_or_mandos.py  update_pontos_cedidos.py  update_pontuacoes.py  utils.py
src/pre_season/: create_dfs.py  create_dicts.py  dfs_creator.py  dicts_creator.py
tests/: conftest.py  test_api_routes.py  test_atletas.py  test_atletas_historico.py  test_atletas_unified.py  test_confrontos.py  test_data_loader.py  test_enums.py  test_pontos_cedidos.py  test_pontos_cedidos_unified.py  test_pontuacoes.py  test_pontuacoes_updater.py  test_request_handler.py  test_tasks.py  test_utils.py
