[project]
name = "cartolapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.1.0",
    "aiohttp==3.8.4",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "plotly==5.15.0",
    "streamlit==1.21.0",
    "stqdm==0.0.5",
    "aiolimiter==1.1.0",
    "ipykernel",
    "matplotlib>=3.10.1",
    "watchdog>=6.0.0",
]
