[project]
name = "cartolapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aiolimiter>=1.2.1",
    "fastapi[standard]>=0.135.3",
    "pandas>=3.0.2",
    "taskiq-fastapi>=0.4.0",
    "taskiq[zmq]>=0.12.1",
]

[dependency-groups]
dev = [
    "marimo>=0.22.0",
    "ruff>=0.15.8",
]
