[project]
name = "cartolapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "aiolimiter>=1.2.1",
    "fastapi[standard]>=0.136.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.14.2",
    "slowapi>=0.1.10",
    "taskiq-fastapi>=0.5.0",
    "taskiq-redis>=1.2.3",
    "deepagents>=0.6.12",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.8",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "marimo>=0.23.13",
    "ruff>=0.15.20",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-env",
    "anyio>=4.14.1",
]

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=pytest",
    "REDIS_URL=redis://localhost:6379",
]
